Feature/link to blueprint (#77)
* Add toggle to set process as blueprint

* remove console logs

* add new blueprint icon

* large icon

* uncomment process saving

* Add toggle to set process as blueprint

* remove console logs

* add new blueprint icon

* large icon

* uncomment process saving

* toggle blueprint

* add blueprint icon to overviews

* working filter

* simplify blueprint filter

* Get rid of console logs

* Add icr component

* Remove console logs

* add icr icons

* Introduce icr-score component

* Add toggle to set process as blueprint

* remove console logs

* add new blueprint icon

* large icon

* uncomment process saving

* Add toggle to set process as blueprint

* remove console logs

* add new blueprint icon

* uncomment process saving

* toggle blueprint

* add blueprint icon to overviews

* working filter

* simplify blueprint filter

* Only able to edit metadata if admin

* WIP: link to blueprint, validation failing

* Add tracked property to trigger change in linked blueprints

* Fix svgs not showing up

* Keep track of scores

* remove changes from different PR

* remove changes from different PR

* remove changes from different PR

* Add blueprint card component

* remove changes from different PR

* remove changes from different PR

* remove changes from different PR

* remove changes from different PR

* remove changes from different PR

* remove changes from different PR

* Don't allow invalid scores

* Allow deselecting scores

* Shield scores

* Add personal data toggles

* Add additional data textarea

* Add information assets

* saving and removing linked blueprint works

---------

Co-authored-by: Martijn Bogaert <martijn.bogaert@sirus.be>

--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -342,6 +342,18 @@
       </div>
     </div>
 
+    {{! ICR }}
+    <div class="au-o-grid__item">
+      {{#if this.process.isBlueprint}}
+        <Process::IcrCard @canEdit={{this.canEdit}} />
+      {{else}}
+        <Process::BlueprintCard
+          @canEdit={{this.canEdit}}
+          @process={{this.process}}
+        />
+      {{/if}}
+    </div>
+
     {{! Diagrams }}
     <div class="au-o-grid__item au-u-margin-top">
 
