--- a/app/components/ipdc-multiple-select.hbs
+++ b/app/components/ipdc-multiple-select.hbs
@@ -7,6 +7,7 @@
     @search={{perform this.loadIpdcProductsTask}}
     @selected={{@selected}}
     @onChange={{@onChange}}
+    @disabled={{@disabled}}
     as |draftIpdcProduct|
   >
     {{language-string-set-nl draftIpdcProduct.name}}
