Add new route for processes used by us

--- a/app/components/navigation-bar.hbs
+++ b/app/components/navigation-bar.hbs
@@ -6,6 +6,11 @@
           Processen
         </AuLink>
       </Tab>
+      <Tab>
+        <AuLink @route="my-local-government" @icon="users-four-of-four">
+          Mijn lokaal bestuur
+        </AuLink>
+      </Tab>
       {{#if this.currentSession.canEdit}}
         <Tab>
           <AuLink @route="shared-processes" @icon="unordered-list">
