Add ICR data (#82)
* Add toggle to set process as blueprint

* remove console logs

* add new blueprint icon

* large icon

* uncomment process saving

* Add toggle to set process as blueprint

* remove console logs

* add new blueprint icon

* large icon

* uncomment process saving

* Merge branch 'feature/tag-process-as-blueprint' of github.com:lblod/frontend-openproceshuis into feature/tag-process-as-blueprint

* toggle blueprint

* add blueprint icon to overviews

* working filter

* simplify blueprint filter

* Get rid of console logs

* Add icr component

* Merge remote-tracking branch 'origin/development' into feature/add-icr-data

* Remove console logs

* add icr icons

* Introduce icr-score component

* Fix svgs not showing up

* Keep track of scores

* Add blueprint card component

* Don't allow invalid scores

* Allow deselecting scores

* Shield scores

* Add personal data toggles

* Add additional data textarea

* Add information assets

* Add control measure

* Add default values

* Merge branch 'development' into feature/add-icr-data

* Rename components

* Rename components

* Add multiple select for information assets

* Merge branch 'development' into feature/add-icr-data

* Link to backend

* Add validation

* Update process

* Add validation rules

* Fetch information assets from backend

* Validate information assets

* Fetch information assets together with process

* Display information assets from backend

* Store new assets

* Fix duplication issue

* Make code more efficient

* Merge branch 'development' into feature/add-icr-data

--- a/app/components/process/blueprint-card.hbs
+++ b/app/components/process/blueprint-card.hbs
@@ -27,7 +27,7 @@
             <Item>
               <:label>Gekoppeld aan</:label>
               <:content>
-                <BlueprintMultipleSelect
+                <Process::BlueprintCard::BlueprintMultipleSelect
                   @selected={{@process.linkedBlueprints}}
                   @onChange={{this.setLinkedBlueprints}}
                 />
