--- a/app/templates/processes/process/index.hbs
+++ b/app/templates/processes/process/index.hbs
@@ -161,11 +161,13 @@
         Algemene informatie
       </:title>
       <:header>
-        <AuButton
-          @skin="naked"
-          @icon="pencil"
-          {{on "click" this.toggleEdit}}
-        >Wijzig</AuButton>
+        {{#unless this.currentSession.readOnly}}
+          <AuButton
+            @skin="naked"
+            @icon="pencil"
+            {{on "click" this.toggleEdit}}
+          >Wijzig</AuButton>
+        {{/unless}}
       </:header>
       <:card as |Card|>
         <Card.Columns>
