fix login button not showing when not logged in

--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -55,72 +55,73 @@
                   </c.footer>
                 </AuCard>
               </div>
-            {{/if}}
-            {{#if (or this.currentSession.canEdit this.currentSession.isAdmin)}}
-              <div class="au-o-grid__item au-u-1-2@medium">
-                <AuCard @flex={{true}} as |c|>
-                  <c.header
-                    @badgeSkin="brand"
-                    @badgeIcon="upload"
-                    @badgeSize="small"
-                  >
-                    <AuHeading @level="2" @skin="4">
-                      Deel jouw processen
-                    </AuHeading>
-                  </c.header>
-                  <c.content>
-                    <AuList @divider={{true}} as |Item|>
-                      <Item>Upload processen</Item>
-                      <Item>Beheer gedeelde processen</Item>
-                    </AuList>
-                  </c.content>
-                  <c.footer>
-                    <div class="au-u-h-functional au-o-flow au-o-flow--small">
-                      <AuLink @skin="button" @route="shared-processes">Deel jouw
-                        processen</AuLink>
-                    </div>
-                  </c.footer>
-                </AuCard>
-              </div>
-            {{/if}}
-            {{#if this.currentSession.isAdmin}}
-              <div class="au-o-grid__item au-u-1-2@medium">
-                <AuCard @flex={{true}} as |c|>
-                  <c.header
-                    @badgeSkin="brand"
-                    @badgeIcon="upload"
-                    @badgeSize="small"
-                  >
-                    <AuHeading @level="2" @skin="4">
-                      Administratie
-                    </AuHeading>
-                  </c.header>
-                  <c.content>
-                    <AuList @divider={{true}} as |Item|>
-                      <Item>Raadpleeg rapporten</Item>
-                      <Item>Bevraag de databank</Item>
-                    </AuList>
-                  </c.content>
-                  <c.footer>
-                    <div class="au-u-h-functional au-o-flow au-o-flow--small">
-                      <AuLink
-                        @skin="button"
-                        @route="reporting"
-                      >Rapportering</AuLink>
-                      <AuLink
-                        @skin="button-secondary"
-                        @route="sparql"
-                      >SPARQL</AuLink>
-                    </div>
-                  </c.footer>
-                </AuCard>
-              </div>
-            {{/if}}
-            {{#unless this.currentSession}}
+              {{#if
+                (or this.currentSession.canEdit this.currentSession.isAdmin)
+              }}
+                <div class="au-o-grid__item au-u-1-2@medium">
+                  <AuCard @flex={{true}} as |c|>
+                    <c.header
+                      @badgeSkin="brand"
+                      @badgeIcon="upload"
+                      @badgeSize="small"
+                    >
+                      <AuHeading @level="2" @skin="4">
+                        Deel jouw processen
+                      </AuHeading>
+                    </c.header>
+                    <c.content>
+                      <AuList @divider={{true}} as |Item|>
+                        <Item>Upload processen</Item>
+                        <Item>Beheer gedeelde processen</Item>
+                      </AuList>
+                    </c.content>
+                    <c.footer>
+                      <div class="au-u-h-functional au-o-flow au-o-flow--small">
+                        <AuLink @skin="button" @route="shared-processes">Deel
+                          jouw processen</AuLink>
+                      </div>
+                    </c.footer>
+                  </AuCard>
+                </div>
+              {{/if}}
+              {{#if this.currentSession.isAdmin}}
+                <div class="au-o-grid__item au-u-1-2@medium">
+                  <AuCard @flex={{true}} as |c|>
+                    <c.header
+                      @badgeSkin="brand"
+                      @badgeIcon="upload"
+                      @badgeSize="small"
+                    >
+                      <AuHeading @level="2" @skin="4">
+                        Administratie
+                      </AuHeading>
+                    </c.header>
+                    <c.content>
+                      <AuList @divider={{true}} as |Item|>
+                        <Item>Raadpleeg rapporten</Item>
+                        <Item>Bevraag de databank</Item>
+                      </AuList>
+                    </c.content>
+                    <c.footer>
+                      <div class="au-u-h-functional au-o-flow au-o-flow--small">
+                        <AuLink
+                          @skin="button"
+                          @route="reporting"
+                        >Rapportering</AuLink>
+                        <AuLink
+                          @skin="button-secondary"
+                          @route="sparql"
+                        >SPARQL</AuLink>
+                      </div>
+                    </c.footer>
+                  </AuCard>
+                </div>
+              {{/if}}
+            {{else}}
               <div class="au-o-grid__item au-u-1-2@medium">
                 <AuLink @skin="button" @route="auth.login">Log in</AuLink>
               </div>
-            {{/unless}}
+            {{/if}}
           </div>
           <p class="au-u-text-center">
             <AuLinkExternal
