--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -1,5 +1,5 @@
 <LayoutHome>
-  {{#if this.currentSession.canOnlyReadWhileAuthenticated}}
+  {{#if this.currentSession.readOnly}}
     <AuAlert
       @skin="warning"
       @icon="alert-triangle"
@@ -31,7 +31,7 @@
         </AuContent>
         <div class="au-c-home__form au-o-flow">
           <div class="au-o-grid au-o-grid--small">
-            {{#if (or this.currentSession.canEdit this.currentSession.isAdmin)}}
+            {{#if this.currentSession.isAuthenticated}}
               <div class="au-o-grid__item au-u-1-2@medium">
                 <AuCard @flex={{true}} as |c|>
                   <c.header
@@ -55,31 +55,35 @@
                   </c.footer>
                 </AuCard>
               </div>
-              <div class="au-o-grid__item au-u-1-2@medium">
-                <AuCard @flex={{true}} as |c|>
-                  <c.header
-                    @badgeSkin="brand"
-                    @badgeIcon="upload"
-                    @badgeSize="small"
-                  >
-                    <AuHeading @level="2" @skin="4">
-                      Deel jouw processen
-                    </AuHeading>
-                  </c.header>
-                  <c.content>
-                    <AuList @divider={{true}} as |Item|>
-                      <Item>Upload processen</Item>
-                      <Item>Beheer gedeelde processen</Item>
-                    </AuList>
-                  </c.content>
-                  <c.footer>
-                    <div class="au-u-h-functional au-o-flow au-o-flow--small">
-                      <AuLink @skin="button" @route="shared-processes">Deel jouw
-                        processen</AuLink>
-                    </div>
-                  </c.footer>
-                </AuCard>
-              </div>
+              {{#if
+                (or this.currentSession.canEdit this.currentSession.isAdmin)
+              }}
+                <div class="au-o-grid__item au-u-1-2@medium">
+                  <AuCard @flex={{true}} as |c|>
+                    <c.header
+                      @badgeSkin="brand"
+                      @badgeIcon="upload"
+                      @badgeSize="small"
+                    >
+                      <AuHeading @level="2" @skin="4">
+                        Deel jouw processen
+                      </AuHeading>
+                    </c.header>
+                    <c.content>
+                      <AuList @divider={{true}} as |Item|>
+                        <Item>Upload processen</Item>
+                        <Item>Beheer gedeelde processen</Item>
+                      </AuList>
+                    </c.content>
+                    <c.footer>
+                      <div class="au-u-h-functional au-o-flow au-o-flow--small">
+                        <AuLink @skin="button" @route="shared-processes">Deel
+                          jouw processen</AuLink>
+                      </div>
+                    </c.footer>
+                  </AuCard>
+                </div>
+              {{/if}}
               {{#if this.currentSession.isAdmin}}
                 <div class="au-o-grid__item au-u-1-2@medium">
                   <AuCard @flex={{true}} as |c|>
@@ -118,7 +122,6 @@
                 <AuLink @skin="button" @route="auth.login">Log in</AuLink>
               </div>
             {{/if}}
-
           </div>
           <p class="au-u-text-center">
             <AuLinkExternal
