Only allow editing ICR data by correct role

--- a/app/components/process/icr-card.hbs
+++ b/app/components/process/icr-card.hbs
@@ -119,7 +119,7 @@
       Informatieclassificatie
     </:title>
     <:header>
-      {{#if @canEdit}}
+      {{#if this.currentSession.canEditIcr}}
         <AuButton
           @skin="naked"
           @icon="pencil"
