update group filter

--- a/app/templates/my-local-government/index.hbs
+++ b/app/templates/my-local-government/index.hbs
@@ -42,6 +42,7 @@
               @selected={{this.group}}
               @onChange={{this.setGroup}}
               @classification={{this.classification}}
+              @publisher={{this.currentSession.group.id}}
               class="grow"
             />
           </div>
