Fix group filter

--- a/app/components/process-select-by-group.hbs
+++ b/app/components/process-select-by-group.hbs
@@ -9,7 +9,7 @@
     @search={{perform this.loadGroupsTask}}
     @selected={{@selected}}
     @onChange={{@onChange}}
-    @classification={{@classification}}
+    @classifications={{@classifications}}
     @triggerId={{@id}}
     as |group|
   >
