--- a/app/templates/processes/index.hbs
+++ b/app/templates/processes/index.hbs
@@ -39,7 +39,7 @@
               @id="filter-group"
               @selected={{this.group}}
               @onChange={{this.setGroup}}
-              @classification={{this.classification}}
+              @classifications={{this.classifications}}
               class="grow"
             />
           </div>
