Move ipdc multiple select component

--- a/app/components/process/details-card.hbs
+++ b/app/components/process/details-card.hbs
@@ -58,7 +58,7 @@
             <Item>
               <:label>Link naar IPDC/LPDC</:label>
               <:content>
-                <IpdcMultipleSelect
+                <Process::DetailsCard::IpdcMultipleSelect
                   @selected={{this.draftIpdcProducts}}
                   @onChange={{this.setDraftIpdcProducts}}
                   @disabled={{not @canEdit}}
